Fix logo size jumping on tablet

--- a/user/themes/starter/assets/styles/modules/_site-header.scss
+++ b/user/themes/starter/assets/styles/modules/_site-header.scss
@@ -49,7 +49,6 @@
 		}
 
 		& svg {
-			width: 100%;
 			height: auto;
 			max-height: 45px;
 		}
@@ -63,7 +62,6 @@
 		}
 
 		& svg {
-			width: 100%;
 			height: auto;
 			max-height: 45px;
 		}
